Add William Denton

--- a/en.ini
+++ b/en.ini
@@ -704,6 +704,9 @@ name=Matt Price
 [http://nullprogram.com/tags/emacs/feed/]
 name=Chris Wellons
 
+[https://www.miskatonic.org/feed/emacs.xml]
+name = William Denton
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
