--- a/en.ini
+++ b/en.ini
@@ -707,6 +707,9 @@ name=Chris Wellons
 [https://www.miskatonic.org/feed/emacs.xml]
 name = William Denton
 
+[http://codingquark.com/category/emacs/feed/]
+name = codingquark
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
