Added LambdaCat's Emacs posts

--- a/en.ini
+++ b/en.ini
@@ -707,6 +707,9 @@ name=Chris Wellons
 [https://www.miskatonic.org/feed/emacs.xml]
 name = William Denton
 
+[http://www.lambdacat.com/tag/emacs/rss/]
+name = LambdaCat
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
