--- a/en.ini
+++ b/en.ini
@@ -707,6 +707,9 @@ name=Chris Wellons
 [https://www.miskatonic.org/feed/emacs.xml]
 name = William Denton
 
+[http://prodissues.com/category/emacs-geeking/feed]
+name = Yaniv Gilad
+
 [http://codingquark.com/category/emacs/feed/]
 name = codingquark
 
