--- a/en.ini
+++ b/en.ini
@@ -707,6 +707,9 @@ name = Yaniv Gilad
 [http://codingquark.com/category/emacs/feed/]
 name = codingquark
 
+[https://emacsair.me/feed.xml]
+name = emacsair
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
