--- a/en.ini
+++ b/en.ini
@@ -710,6 +710,12 @@ name = codingquark
 [https://emacsair.me/feed.xml]
 name = emacsair
 
+[http://emacsninja.com/feed.atom]
+name = emacsninja
+
+[http://emacshorrors.com/feed.atom]
+name = emacshorrors
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
