--- a/zh.ini
+++ b/zh.ini
@@ -27,3 +27,6 @@ encoding = utf-8
 # 博客列表
 [http://wenshanren.org/?cat=10&tag=zh&feed=rss2]
 name = 肉山博客
+
+[http://coldnew.github.io/tags/emacs/]
+name = coldnew博客
