remove coldnew'blog, add emacs中文网

--- a/zh.ini
+++ b/zh.ini
@@ -28,5 +28,5 @@ encoding = utf-8
 [http://wenshanren.org/?cat=10&tag=zh&feed=rss2]
 name = 肉山博客
 
-[http://coldnew.github.io/tags/emacs/]
-name = coldnew博客
+[http://emacser.com/feed]
+name = Emacs中文网
