Add Manuel Uberti feed

--- a/en.ini
+++ b/en.ini
@@ -716,6 +716,9 @@ name = emacsninja
 [http://emacshorrors.com/feed.atom]
 name = emacshorrors
 
+[https://manuel-uberti.github.io/feed]
+name = Manuel Uberti
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
