--- a/en.ini
+++ b/en.ini
@@ -719,6 +719,9 @@ name = emacshorrors
 [https://manuel-uberti.github.io/feed]
 name = Manuel Uberti
 
+[https://martinralbrecht.wordpress.com/category/emacs/feed/atom/]
+name = Martin R. Albrecht
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
