--- a/en.ini
+++ b/en.ini
@@ -719,6 +719,9 @@ name = emacshorrors
 [https://manuel-uberti.github.io/feed]
 name = Manuel Uberti
 
+[http://acidwords.com/emacs.xml]
+name = Sanel Zukan
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
