--- a/en.ini
+++ b/en.ini
@@ -726,6 +726,9 @@ name = emacshorrors
 [https://manuel-uberti.github.io/feed]
 name = Manuel Uberti
 
+[https://www.topbug.net/blog/category/programming-tools/emacs/feed/]
+name = Top Bug Net
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
