Added LambdaCat's Emacs posts. Obsoletes PR#62.

--- a/en.ini
+++ b/en.ini
@@ -107,6 +107,9 @@ name = Alex Schroeder
 [http://emacspeak.blogspot.com/atom.xml]
 name = emacspeak
 
+[http://www.lambdacat.com/tag/emacs/rss/]
+name = LambdaCat
+
 # [http://www.stallman.org/rss/rss.xml]
 # name = Richard Stallman
 
