Added Sanel's blog. Obsoletes PR#73.

--- a/en.ini
+++ b/en.ini
@@ -110,6 +110,9 @@ name = emacspeak
 [http://www.lambdacat.com/tag/emacs/rss/]
 name = LambdaCat
 
+[http://acidwords.com/emacs.xml]
+name = Sanel Zukan
+
 # [http://www.stallman.org/rss/rss.xml]
 # name = Richard Stallman
 
