Add Top Bug Net. Obsoletes PR#75.

--- a/en.ini
+++ b/en.ini
@@ -111,6 +111,9 @@ name = emacspeak
 name = LambdaCat
 
 [http://acidwords.com/emacs.xml]
+
+[https://www.topbug.net/blog/category/programming-tools/emacs/feed/]
+name = Top Bug Net
 name = Sanel Zukan
 
 # [http://www.stallman.org/rss/rss.xml]
