Add Matthias Pfeifer's feed. Resolves Issue 74.

--- a/en.ini
+++ b/en.ini
@@ -734,6 +734,9 @@ name = emacsninja
 [http://emacshorrors.com/feed.atom]
 name = emacshorrors
 
+[http://mp.vv.si/blog/category/emacs/feed/]
+name = Matthias Pfeifer
+
 [https://manuel-uberti.github.io/feed]
 name = Manuel Uberti
 
