I really need to get around to figuring out what the deal is with screen, Terminal.app, and non-ASCII characters.

--- a/en.ini
+++ b/en.ini
@@ -131,7 +131,7 @@ name = Top Bug Net
 
 #[http://www.forcix.cx/weblog/index.rss]
 [http://blog.jorgenschaefer.de/feeds/posts/default/-/Emacs]
-name = Jorgen Schäfer
+name = Jorgen Schaefer
 
 # [http://paste.lisp.org/list-full.rss?emacs]
 # name = Lisppaste for #emacs
