add Alex Gromnitsky's blog

--- a/en.ini
+++ b/en.ini
@@ -749,6 +749,9 @@ name = Emacs café
 [https://ekaschalk.github.io/categories/emacs/index.xml]
 name = Modern Emacs
 
+[http://gromnitsky.blogspot.com/feeds/posts/default/-/emacs]
+name = Alexander Gromnitsky
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
