Add eRambler emacs tag

--- a/en.ini
+++ b/en.ini
@@ -749,6 +749,9 @@ name = Emacs café
 [https://ekaschalk.github.io/categories/emacs/index.xml]
 name = Modern Emacs
 
+[https://erambler.co.uk/tags/emacs.xml]
+name = eRambler (posts tagged "emacs")
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
