--- a/en.ini
+++ b/en.ini
@@ -752,6 +752,9 @@ name = Modern Emacs
 [https://erambler.co.uk/tags/emacs.xml]
 name = eRambler (posts tagged "emacs")
 
+[https://ofosos.org/tag/emacs/rss/]
+name = Mark Meyer
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
