Add Rafal Spacjer blog

--- a/en.ini
+++ b/en.ini
@@ -755,6 +755,9 @@ name = eRambler (posts tagged "emacs")
 [https://ofosos.org/tag/emacs/rss/]
 name = Mark Meyer
 
+[http://www.spacjer.com/emacs/feed.xml]
+name = Rafal Spacjer
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
