Add feed for https://emacsnotes.wordpress.com (published by Emacksnotes)

--- a/en.ini
+++ b/en.ini
@@ -764,6 +764,9 @@ name = Rafal Spacjer
 [https://scripter.co/categories/emacs/atom.xml]
 name = scripter.co | Emacs
 
+[https://emacsnotes.wordpress.com/feed/]
+name = Emacks Notes
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
