--- a/en.ini
+++ b/en.ini
@@ -764,6 +764,9 @@ name = Rafal Spacjer
 [https://scripter.co/categories/emacs/atom.xml]
 name = scripter.co | Emacs
 
+[https://www.with-emacs.com/rss.xml]
+name = (with-emacs
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
