codingquark.com: updated feed URL

--- a/en.ini
+++ b/en.ini
@@ -722,8 +722,8 @@ name = William Denton
 [http://prodissues.com/category/emacs-geeking/feed]
 name = Yaniv Gilad
 
-# [http://codingquark.com/category/emacs/feed/]
-# name = codingquark
+[https://codingquark.com/emacs/feed.xml]
+name = codingquark
 
 [https://emacsair.me/feed.xml]
 name = emacsair
